Fix spacing on Blog for mobiles

--- a/src/scss/components/_spacing.scss
+++ b/src/scss/components/_spacing.scss
@@ -23,7 +23,7 @@
 .novablocks-media--blog {
     
     @include specific(3) {
-        --block-top-spacing: 0;
+        --block-top-spacing: 2;
         --block-bottom-spacing: 2;
         --novablocks-element-spacing-multiplier: 0.5;
         
