--- a/style.css
+++ b/style.css
@@ -3187,7 +3187,7 @@ span.page-numbers {
   --novablocks-element-spacing-multiplier: 0; }
 
 .novablocks-media--blog[class][class][class] {
-  --block-top-spacing: 0;
+  --block-top-spacing: 2;
   --block-bottom-spacing: 2;
   --novablocks-element-spacing-multiplier: 0.5; }
   .novablocks-media--blog[class][class][class]:last-child {
